# mashiro11.github.io

./: .gitignore  CMakeLists.txt  CMakeLists.txt-orig  CMakeLists.txt-test2  Doxyfile  README.md  functions.cpp  lembrete.txt  lib.h  main.cpp  trab_2
Readme2/: README.md
classesPy/: GerenteBD.py  GerenteLogin.py  mainScript.py
html/: CaraCracha_8cpp.html  CaraCracha_8cpp__incl.map  CaraCracha_8cpp__incl.md5  CaraCracha_8h.html  CaraCracha_8h__dep__incl.map  CaraCracha_8h__dep__incl.md5  CaraCracha_8h__incl.map  CaraCracha_8h__incl.md5  CaraCracha_8h_source.html  GerenteBD_8cpp.html  GerenteBD_8cpp__incl.md5  GerenteBD_8h.html  GerenteBD_8h__incl.md5  GerenteBD_8h_source.html  GerenteLogin_8h.html  GerenteLogin_8h__incl.md5  GerenteLogin_8h_source.html  Main_8cpp.html  Main_8cpp__incl.md5  Main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  Main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  README_8md.html  Reserva_8cpp__incl.map  Reserva_8cpp__incl.md5  Reserva_8h.html  Reserva_8h__incl.md5  Reserva_8h_source.html  SistemaLinf_8cpp.html  SistemaLinf_8cpp__incl.map  SistemaLinf_8cpp__incl.md5  SistemaLinf_8h.html  SistemaLinf_8h__dep__incl.map  SistemaLinf_8h__dep__incl.md5  SistemaLinf_8h_source.html  TiraFoto_8cpp.html  TiraFoto_8cpp__incl.map  TiraFoto_8cpp__incl.md5  TiraFoto_8cpp_a2587e779ee64993beca2c9620e7e1ec5_icgraph.map  TiraFoto_8cpp_a6079220416e9a40882f29520856d6049_icgraph.md5  TiraFoto_8cpp_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  (+217 more)
imagens/: README.md
include/: GerenteBD.h  GerenteLogin.h  Reserva.h  SistemaLinf.h  Usuario.cpp  Usuario.h
(+216 files in other folders)
